# AtlasLocalization

./: .gitignore  8cm-tag36h11.psd  CMakeLists.txt  apriltags_demo.cpp  install.sh
apriltag/: main.cpp
apriltag.xcodeproj/: project.pbxproj
apriltag.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
apriltag.xcodeproj/project.xcworkspace/xcuserdata/Yifei_W.xcuserdatad/: UserInterfaceState.xcuserstate
apriltag.xcodeproj/xcuserdata/Yifei_W.xcuserdatad/xcschemes/: xcschememanagement.plist
apriltags_ros/launch/: Test_launch.launch  example.launch
apriltags_ros/nodes/: Test_node.py  Test_node.py~
